# n2k_ros2_shared_msgs

./: .gitignore  LICENSE  README.md
src/n2k_ros2_shared_msgs/: CMakeLists.txt  package.xml
src/n2k_ros2_shared_msgs/msg/: ActualPressure130314.msg  AisAidsToNavigationReport129041.msg  AisClassAPositionReport129038.msg  AisClassAStaticAndVoyageRelatedData129794.msg  AisClassBExtendedPositionReport129040.msg  AisClassBPositionReport129039.msg  AisClassBStaticDataPartA129809.msg  AisClassBStaticDataPartB129810.msg  AisSafetyRelatedBroadcastMessage129802.msg  AisSarAircraftPositionReport129798.msg  AisUtcAndDateReport129793.msg  Attitude127257.msg  BinarySwitchBankStatus127501.msg  CogSogRapidUpdate129026.msg  DirectionData130577.msg  EngineParametersRapidUpdate127488.msg  EnvironmentalParameters130310.msg  EnvironmentalParameters130311.msg  FurunoHeave65280.msg  FurunoHeelAngleRollInformation130843.msg  GnssDops129539.msg  GnssPositionData129029.msg  GnssPositionRapidUpdate129025.msg  GnssSatellitesInView129540.msg  Heave127252.msg  MagneticVariation127258.msg  MeteorologicalStationData130323.msg  Nmea2kCommonMsgHeaderStruct.msg  Nmea2kGnssSatellitesDataStruct.msg  ProductInfo126996.msg  ROCVesselIDHeader.msg  RateOfTurn127251.msg  ReferenceStationsStruct.msg  Rudder127245.msg  Speed128259.msg  SystemTime126992.msg  Temperature130312.msg  TemperatureExtendedRange130316.msg  TransmissionParametersDynamic127493.msg  VesselHeading127250.msg  (+2 more)
src/n2k_ros2_shared_msgs/srv/: EngineControl.srv  OperationalStateControl.srv  RemoteControl.srv  RudderControl.srv
